# ascacou-solver

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  bitfiddle.html  play.rb  tourney
.github/workflows/: tests.yml  tourney.yml
alphacou/: Cargo.toml
alphacou/src/: lib.rs
benchmarks/: Cargo.toml  generate.rs  run.rs  util.rs  utils.rs
benchmarks/data/: earlygame  endgame  midgame  startgame
docs/: Forced-Moves-Exploration.md  Game-Analysis.md
engine/: Cargo.toml
engine/src/: board.rs  color.rs  game.rs  lib.rs  mov.rs  player.rs  tileset.rs
minicou/: Cargo.toml  build.rs
minicou/src/: evaluation.rs  heuristic.rs  lib.rs  solver.rs  transposition_table.rs
py/: Cargo.toml  README.md  pyproject.toml
py/src/: lib.rs
script/: match  tourney
solver/: Cargo.toml
solver/src/: board.rs  color.rs  console.rs  debug.rs  game.rs  lib.rs  mov.rs  player.rs  tileset.rs
src/: board.rs  game.rs  heuristic.rs  main.rs  mov.rs  player.rs  solver.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
