[workspace]
resolver = "3"
members = ["alphacou", "engine", "minicou", "py", "wasm", "benchmarks"]

[workspace.package]
authors = ["Ulysse <buonomo.ulysse@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/BuonOmo/ascacou-solver"
documentation = "https://docs.rs/ascacou-solver"
readme = "README.md"
publish = false

[workspace.dependencies]
ascacou = { path = "engine" }
minicou = { path = "minicou" }
rand = "0.9"
clap = { version = "4.0.9", features = ["derive"] }
indextree = "4.3.1"

[profile.dev]
# Needed for better instrument output
split-debuginfo = "packed"

[profile.release]
# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
# debug = 1
# split-debuginfo = "packed"
debug = "limited"
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
