[package]
name = "alphacou"
description = "A monte-carlo tree search based AI for ascacou"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "alphacou"
path = "src/bin/cli.rs"

[dependencies]
ascacou.workspace = true
clap.workspace = true
indextree.workspace = true
rand.workspace = true
