[package]
name = "ascacou"
description = "A rust game engine for Ascacou"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
default-run = "console"

[[bin]]
name = "console"
# Play in the console (TODO: change to some other package, allow ai choice).
path = "src/bin/console.rs"

[[bin]]
name = "game-info"
# Allow for quick and dirty interface with bash, should change to a rust backend/frontend interface.
path = "src/bin/game-info.rs"

[dependencies]
rand.workspace = true
