[package]
name = "minicou"
description = "A (some day strong) minimax solver for the ascacou board game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords = ["ascacou", "game", "solver", "minimax"]

[[bin]]
name = "minicou"
path = "src/bin/cli.rs"
required-features = ["cli"]


[dependencies]
ascacou.workspace = true
clap = { workspace = true, optional = true }
rand.workspace = true

[features]
cli = ["clap"]
