[package]
name = "ascacou-python"
version = "0.3.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for the ascacou game engine"
repository.workspace = true
documentation.workspace = true
readme.workspace = true
publish = false # Published on https://PyPI.org using Maturin.

[lib]
name = "ascacou"
crate-type = ["cdylib"]

[dependencies]
ascacou.workspace = true
pyo3 = { version = "0.27", features = ["extension-module"] }
